# PROJECT_CORE

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AWS_DEPLOYMENT.md  Caddyfile  INSTALLER.md  Makefile  README.md  SECURITY.md  SOLUTION_IMPLEMENTED.md  STEP_BY_STEP.md  TASKS.md  agent-installation.md  agent.toml.example  agent_v2.py  collector.sh  daemon.sh  docker-compose.ha.yml  docker-compose.prod.yml  docker-compose.yml  env.sh  macintel-agent.spec  macintel-watchdog.spec  monitor.py  pyproject.toml  report.sh  start.sh  storage.py  techarchitecture.md
agent/: agent_entry.py  pyproject.toml  requirements.txt
agent/agent/: __init__.py  config.py  core.py  enrollment.py  keystore.py  sender.py  watchdog.py
agent/agent/collectors/: base.py  posture.py  volatile.py
agent/config/: agent.conf.example  agent.toml.example
agent/launchd/: com.macintel.agent.plist
agent/os/macos/: TROUBLESHOOT.md  __init__.py  fix_agent.py  keystore.py  launchd.py  normalizer.py  requirements.txt
agent/pkg/: build_pkg.sh
agent/scripts/: install.sh
agent/security/: agent-001.key
agent/tests/: conftest.py
manager/: Dockerfile  ThreatIntel.Dockerfile  __init__.py  pyproject.toml  requirements.txt
manager/config/: manager.conf.example
manager/manager/: __init__.py  ai_analyst.py  auth.py  chunk_tracker.py  chunker.py  config.py  crypto.py  db.py  index.py  indexer.py  models.py  pool.py  server.py  store.py  threat_intel_service.py  ws_hub.py
manager/scripts/: entrypoint.sh  keygen.py  setup.sh  threat-intel-entrypoint.sh
manager/tests/: conftest.py
(+170 files in other folders)
