[build-system]
requires      = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "mac-intel-agent"
version     = "1.0.0"
description = "macOS system intelligence agent — collects and ships encrypted telemetry"
requires-python = ">=3.9"
dependencies = [
    "cryptography>=42.0.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
mac-intel-agent = "agent.core:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]
